--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
       body { margin: 0; overflow: hidden; }
       #ar-container { width: 100vw; height: 100vh; position: relative; }
     </style>
+
+    <!-- Three.js ve eklentileri -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
+
+    <!-- MindAR (UMD versiyon, import edilemez ama tarayıcıda direkt çalışır) -->
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
   </head>
   <body>
     <div id="ar-container"></div>
 
-    <script type="module">
-      import { MindARThree } from 'https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js';
-      import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
-      import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/loaders/GLTFLoader.js';
-
+    <script>
       const startAR = async () => {
-        const mindarThree = new MindARThree({
+        const mindarThree = new window.MINDAR.IMAGE.MindARThree({
           container: document.querySelector("#ar-container"),
-          imageTargetSrc: "./qrcode.mind", // marker hedef dosyan
+          imageTargetSrc: "./qrcode.mind",
         });
 
         const { renderer, scene, camera } = mindarThree;
 
-        const anchor = mindarThree.addAnchor(0); // target index: 0 (ilk target)
+        const anchor = mindarThree.addAnchor(0);
 
-        const loader = new GLTFLoader();
+        const loader = new THREE.GLTFLoader();
         let model;
         let modelLoaded = false;
 
@@ -34,7 +37,7 @@
           model = gltf.scene;
           model.scale.set(0.5, 0.5, 0.5);
           model.visible = false;
-          scene.add(model); // Anchor değil, doğrudan sahneye eklendi
+          scene.add(model);
         });
 
         anchor.onTargetFound = () => {
@@ -43,11 +46,11 @@
             model.quaternion.copy(anchor.group.quaternion);
             model.visible = true;
             modelLoaded = true;
-            console.log("Model sahneye eklendi ve sabitlendi.");
           }
         };
 
         await mindarThree.start();
+
         renderer.setAnimationLoop(() => {
           renderer.render(scene, camera);
         });
