--- a/index.html
+++ b/index.html
@@ -1,70 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>MindAR + GLTF</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MindAR + GLTF Loader Örneği</title>
   <style>
-    body, html {
-      margin: 0; padding: 0;
-      overflow: hidden;
-      width: 100%; height: 100%;
-    }
-    #ar-container {
-      width: 100vw; height: 100vh;
-      position: relative;
-    }
+    body, html { margin: 0; overflow: hidden; width: 100%; height: 100%; }
+    #ar-container { width: 100%; height: 100%; position: relative; }
   </style>
-
-  <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
-
-  <!-- MindAR -->
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.4.1/dist/mindar-image-three.prod.js"></script>
-
 </head>
 <body>
-
   <div id="ar-container"></div>
 
+  <!-- Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <!-- GLTFLoader -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
+  <!-- MindAR -->
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
+
   <script>
-    const startAR = async () => {
-      const mindarThree = new window.MINDAR.IMAGE.MindARThree({
-        container: document.querySelector("#ar-container"),
-        imageTargetSrc: "./qrkod.mind"  // MindAR hedef dosyanız
+    const container = document.querySelector("#ar-container");
+
+    let model = null;
+    let modelPosition = new THREE.Vector3();
+
+    async function startAR() {
+      const mindar = new window.MindAR.IMAGE.MindARThree({
+        container: container,
+        imageTargetSrc: "./qrcode.mind"
       });
 
-      const { renderer, scene, camera } = mindarThree;
+      const { renderer, scene, camera } = mindar;
 
-      const anchor = mindarThree.addAnchor(0);
-
+      // GLTF Loader ile model yükleme
       const loader = new THREE.GLTFLoader();
-      let model = null;
-
-      loader.load('./model.glb', (gltf) => {
+      loader.load("./model.gltf", (gltf) => {
         model = gltf.scene;
-        model.scale.set(0.5, 0.5, 0.5);
-        model.visible = false;
-        anchor.group.add(model);
+        model.scale.set(0.5, 0.5, 0.5); // Model ölçeği (isteğe göre ayarla)
+        scene.add(model);
       });
 
-      anchor.onTargetFound = () => {
-        if (model) model.visible = true;
-      };
+      // Marker bulunduğunda pozisyon güncelle
+      mindar.on("targetFound", (event) => {
+        if (!model) return;
+        const pos = event.detail.position;
+        model.position.set(pos.x, pos.y, pos.z);
+        modelPosition.copy(model.position);
+      });
 
-      anchor.onTargetLost = () => {
-        if (model) model.visible = false;
-      };
+      // Marker kaybolduğunda model pozisyonu kalır (hiçbir işlem yapılmaz)
 
-      await mindarThree.start();
+      await mindar.start();
 
+      // Animasyon döngüsü
       renderer.setAnimationLoop(() => {
         renderer.render(scene, camera);
       });
-    };
+    }
 
     startAR();
   </script>
-
 </body>
 </html>
