--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MindAR + GLB Loader Örneği</title>
+  <title>MindAR + GLTFLoader Örneği</title>
   <style>
-    body, html {
-      margin: 0; padding: 0; overflow: hidden;
-      width: 100%; height: 100%;
-    }
-    #ar-container {
-      width: 100vw;
-      height: 100vh;
-      position: relative;
-    }
+    body, html { margin: 0; overflow: hidden; width: 100%; height: 100%; }
+    #ar-container { width: 100vw; height: 100vh; }
   </style>
 </head>
 <body>
@@ -24,40 +16,44 @@
     import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/loaders/GLTFLoader.js';
     import { MindARThree } from 'https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-image-three.prod.js';
 
-    const container = document.querySelector("#ar-container");
-    let model = null;
-
-    async function startAR() {
-      const mindar = new MindARThree({
-        container: container,
-        imageTargetSrc: "./qrcode.mind"
+    const start = async () => {
+      const mindarThree = new MindARThree({
+        container: document.querySelector("#ar-container"),
+        imageTargetSrc: './qrcode.mind', // Buraya MindAR hedef dosyanızın yolu
       });
 
-      const { renderer, scene, camera } = mindar;
+      const { renderer, scene, camera } = mindarThree;
 
+      // GLTF Loader ile model yükle
       const loader = new GLTFLoader();
-      loader.load("./model.glb", (gltf) => {
-        model = gltf.scene;
-        model.scale.set(0.5, 0.5, 0.5);
-        scene.add(model);
-      }, undefined, (error) => {
-        console.error("Model yüklenirken hata:", error);
+      const gltf = await loader.loadAsync('./model.glb'); // Buraya model dosyanızın yolu
+      const model = gltf.scene;
+
+      // Modeli sahneye ekle ama başta görünür yapma
+      model.visible = false;
+      scene.add(model);
+
+      // Marker bulunduğunda modeli konumlandır ve göster
+      mindarThree.on("targetFound", (targetIndex) => {
+        model.visible = true;
       });
 
-      mindar.on("targetFound", (event) => {
-        if (!model) return;
-        const pos = event.detail.position;
-        model.position.set(pos.x, pos.y, pos.z);
+      // Marker kaybolduğunda model görünmeye devam etsin
+      mindarThree.on("targetLost", (targetIndex) => {
+        // Burada model.visible = false yapma,
+        // model sahnede kalacak
       });
 
-      await mindar.start();
+      // MindAR'ı başlat
+      await mindarThree.start();
 
+      // Render loop
       renderer.setAnimationLoop(() => {
         renderer.render(scene, camera);
       });
-    }
+    };
 
-    startAR();
+    start();
   </script>
 </body>
 </html>
